<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login_register.MainActivity">
    <TextView
            android:text="You 'n Me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:textSize="40sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="224dp" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/tvojSvijetTvojaLjubac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:scaleX="1" android:scaleY="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/pridruziSe"
            android:layout_width="238dp"
            android:layout_height="59dp" android:id="@+id/JoinButton"
            android:backgroundTint="@android:color/holo_red_dark" app:cornerRadius="18dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="492dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/prijaviSe"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txPrijava"
            app:layout_constraintTop_toBottomOf="@+id/JoinButton"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.14"/>
    <ImageView
            android:layout_width="167dp"
            android:layout_height="188dp" app:srcCompat="@mipmap/first_hearts_foreground"
            android:id="@+id/imageView24"
            android:scaleType="centerCrop" android:scaleX="1.5" android:scaleY="1.5" android:layout_marginEnd="244dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="144dp"
            android:layout_height="163dp" app:srcCompat="@mipmap/first_hearts_foreground"
            android:id="@+id/imageView25"
            android:scaleType="centerCrop" android:scaleX="1.5" android:scaleY="1.5" android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="320dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>