<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="197dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="204dp"
            android:id="@+id/relativeLayout2" app:layout_constraintHorizontal_bias="0.496">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_alignParentTop="true" android:layout_marginTop="30dp"
                android:id="@+id/txOldPassword"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txNewPassword"
                android:layout_below="@+id/txOldPassword"/>
        <TextView
                android:text="@string/staraLozinka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView31" android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"/>
        <TextView
                android:text="@string/novalozinka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/textView32" android:layout_below="@+id/txOldPassword"/>
    </RelativeLayout>
    <Button
            android:text="@string/promjeniPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btnChangePassword"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" android:layout_marginTop="40dp"
            android:elevation="5dp" android:backgroundTint="#BA1E1E"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/lovechat_foreground"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="56dp" android:id="@+id/imageView8"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="284dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>