<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:id="@+id/txDatumRodenja"
            android:inputType="date"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="175dp"/>
    <TextView
            android:text="@string/datumRodena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView21"
            android:layout_alignParentStart="true"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="156dp"/>
    <Button
            android:text="@string/dalje"
            android:layout_width="145dp"
            android:layout_height="wrap_content" android:id="@+id/buttonDalje"
            android:backgroundTint="@android:color/holo_red_dark"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="448dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/pronadiSvojSpol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="44sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"/>
    <ImageView
            android:layout_width="164dp"
            android:layout_height="128dp" app:srcCompat="@mipmap/heartswing_foreground"
            android:id="@+id/imageView16" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.969"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"/>
    <RelativeLayout
            android:layout_width="191dp"
            android:layout_height="186dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="257dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="6dp">

        <TextView
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content" android:id="@+id/tiSi"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp" android:textSize="18sp" android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"/>
        <ImageButton
                android:layout_width="78dp"
                android:layout_height="78dp" app:srcCompat="@mipmap/female_foreground"
                android:id="@+id/youAreFemale"
                android:layout_alignParentEnd="true" android:layout_marginEnd="15dp"
                android:layout_alignParentBottom="true" android:layout_marginBottom="50dp"/>
        <ImageButton
                android:layout_width="78dp"
                android:layout_height="78dp" app:srcCompat="@mipmap/male_foreground" android:id="@+id/youAreMale"
                android:layout_alignParentBottom="true" android:layout_marginBottom="50dp"
                android:layout_alignParentStart="true" android:layout_marginStart="15dp"/>
        <TextView
                android:text="@string/tiSi"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:textSize="30sp"
                android:layout_alignParentEnd="true" android:layout_marginEnd="30dp" android:layout_marginTop="7dp"
                android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="190dp"
            android:layout_height="186dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="257dp" android:layout_marginEnd="6dp" app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/trazis"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp" android:textSize="18sp"
                android:gravity="center" android:foregroundGravity="center" android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"/>
        <ImageButton
                android:layout_width="78dp"
                android:layout_height="78dp" app:srcCompat="@mipmap/female_foreground" android:id="@+id/lookForFemale"
                android:layout_alignParentEnd="true" android:layout_marginEnd="15dp"
                android:layout_alignParentBottom="true" android:layout_marginBottom="50dp"/>
        <TextView
                android:text="@string/trazis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/trazisView"
                android:textSize="30sp"
                android:layout_alignParentEnd="true" android:layout_marginEnd="1dp"
                android:gravity="center" android:layout_marginTop="7dp" android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" android:layout_marginStart="1dp"/>
        <ImageButton
                android:layout_width="78dp"
                android:layout_height="78dp" app:srcCompat="@mipmap/male_foreground" android:id="@+id/lookForMale"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp" android:layout_alignParentBottom="true"
                android:layout_marginBottom="50dp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>