<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Button
            android:text="@string/prijava"
            android:layout_width="138dp"
            android:layout_height="46dp" android:id="@+id/onClickLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@android:color/holo_red_dark"
            app:cornerRadius="14dp" app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="137dp"
            android:layout_height="109dp" app:srcCompat="@mipmap/heartswing_foreground"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:scaleType="centerCrop" android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="250dp"
            android:layout_height="158dp" app:srcCompat="@mipmap/heartswing_foreground"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="144dp" android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/onClickLogin" android:layout_marginTop="36dp"/>
    <TextView
            android:text="@string/prijava"
            android:layout_height="wrap_content" android:id="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent" android:textSize="34sp" android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="8dp"/>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/relativeLayout" app:layout_constraintTop_toBottomOf="@+id/textView14"
            android:layout_marginTop="24dp">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editLoginEmail"
                android:layout_marginTop="40dp"
                android:layout_alignParentTop="true"
        />
        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11"
                android:layout_marginTop="20dp"
                android:layout_alignParentTop="true"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editLoginPassword"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/editLoginEmail"/>
        <TextView
                android:text="@string/lozinka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView13"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/editLoginEmail"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>