<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomePage"
        android:outlineProvider="bounds">


    <View
            android:id="@+id/splitLine_hor2"
            android:layout_width="380dp"
            android:layout_height="2dp"
            android:background="#000000"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="18dp" app:layout_constraintTop_toBottomOf="@+id/onClickSetting"
            android:layout_marginTop="2dp"/>
    <View
            android:id="@+id/splitLine_hor4"
            android:layout_width="380dp"
            android:layout_height="2dp"
            android:background="#000000"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="18dp" app:layout_constraintTop_toBottomOf="@+id/txPomoc"
            android:layout_marginTop="2dp"/>
    <View
            android:id="@+id/splitLine_hor3"
            android:layout_width="380dp"
            android:layout_height="2dp"
            android:background="#000000"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/clcActivate"
            android:layout_marginTop="2dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="194dp"
            android:layout_height="142dp"
            android:src="@drawable/resume"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/onClickGoToProfileEdit" android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="28dp"
            app:civ_border_width="3dp"
            app:civ_border_color="#FFEF2719"
            app:layout_constraintHorizontal_bias="0.497"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal"
            android:id="@+id/clcActivate"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

        <TextView
                android:text="@string/donate"
                android:textColor="#FF3C3C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" android:layout_marginEnd="22dp"
                android:layout_alignParentBottom="true" android:layout_marginBottom="14dp"/>
        <TextView
                android:text="@string/pretplata"
                android:textColor="@drawable/text_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginBottom="8dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="24dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/clcActivate" android:layout_marginTop="16dp"
            android:id="@+id/txPomoc">

        <TextView
                android:text="@string/pomoc"
                android:textColor="@drawable/text_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true" android:layout_marginBottom="8dp"
                android:layout_alignParentStart="true" android:layout_marginStart="24dp" android:textSize="25sp"/>
        <ImageView
                android:layout_width="37dp"
                android:layout_height="37dp" app:srcCompat="@android:drawable/ic_menu_help"
                android:id="@+id/imageView6"
                android:layout_alignParentBottom="true" android:layout_marginBottom="12dp"
                android:layout_alignParentEnd="true" android:layout_marginEnd="22dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/onClickSetting" app:layout_constraintTop_toBottomOf="@+id/txPomoc"
            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.0">

        <ImageView
                android:layout_width="37dp"
                android:layout_height="37dp" app:srcCompat="@android:drawable/ic_menu_manage"
                android:id="@+id/imageView5"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp" android:layout_alignParentEnd="true"
                android:layout_marginEnd="22dp"/>
        <TextView
                android:text="@string/postavke"
                android:textColor="@drawable/text_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"

                android:layout_alignParentBottom="true" android:layout_alignParentStart="true"
                android:layout_marginBottom="8dp" android:layout_marginStart="24dp" android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:id="@+id/relativeLayout8" app:layout_constraintTop_toBottomOf="@+id/onClickGoToProfileEdit"
            android:layout_marginTop="20dp">
        <TextView
                android:text="@string/ime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" android:layout_marginTop="6dp"
                android:id="@+id/txProfilenadimak" android:textSize="30sp"/>
        <TextView
                android:text="28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" android:layout_marginTop="7dp"
                android:id="@+id/txGodine" android:textSize="30sp"
                android:layout_toEndOf="@+id/zarez" android:layout_marginStart="8dp"/>
        <TextView
                android:text=","
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" android:layout_marginTop="6dp"
                android:id="@+id/zarez" android:textSize="30sp"
                android:layout_toEndOf="@+id/txProfilenadimak"
                android:layout_marginStart="10dp"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
